# airtrain

./: .gitignore  MANIFEST.in  README.md  TODO.txt  proompt.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
EXPERIMENTS/integrations_examples/: anthropic_with_image.py
EXPERIMENTS/schema_exps/: pydantic_schemas.py
airtrain/: __init__.py  changelog.md
airtrain/agents/: README.md
airtrain/contrib/travel/agentlib/: verification_agent.py
airtrain/integrations/fireworks/: structured_completion_skills.py
airtrain/integrations/lancedb/: credentials.py  database_service.py  requirements.txt  schemas.py
airtrain/integrations/openai/: skills.py
airtrain/tools/: __init__.py
examples/: credentials_usage.py  enhanced_telemetry_example.py  schema_usage.py  skill_usage.py  telemetry_example.py
examples/agents/: .env.example  README.md  agent_example.py  groq_advanced_tools_example.py  groq_memory_example.py
examples/apps/cli/: README.md
examples/apps/cli/chat_agent/: README.md  pyproject.toml
examples/apps/cli/chat_agent/chat_agent/: __init__.py  cli.py  config.py  main.py  storage.py
examples/apps/cli/chat_agent/tests/: test_chat_agent.py
examples/apps/cli/trmx_agent/: README.md  TODO.md  publish.sh  pyproject.toml  test_list_models.py  test_openai_models.py
examples/apps/cli/trmx_agent/scripts/: build.sh  publish.sh  trmx-release.py
examples/apps/cli/trmx_agent/tests/: __init__.py
examples/apps/cli/trmx_agent/trmx_agent/: __init__.py  cli.py
examples/creating-skills/: anthropic_skills_usage.py  chinese_anthropic_assistant.py  chinese_anthropic_usage.py  chinese_assistant_usage.py  fireworks_skills_usage.py  openai_skills.py  openai_skills_usage.py  openai_structured_skills.py  together_rerank_skills.py  together_rerank_skills_async.py
examples/docs-examples/: creds-getting-started.py  intro-schema.py  openai-example.py
examples/integrations/anthropic/: chat_example.py  chinese_example.py  conversation_history_test.py  streaming_chat_example.py  vision_example.py
examples/integrations/cerebras/: conversation_history_test.py  streaming_chat_example.py
examples/integrations/combined/: groq_fireworks_example.py
examples/integrations/fireworks/: async_request_example.py  chat_example.py  completion_example.py  conversation_history_test.py  parser_example.py  requests_example.py  streaming_chat_example.py  streaming_tool_calls_example.py  structured_chat_example.py  structured_completion_example.py  structured_conversation_example.py  structured_requests_example.py  structured_tool_calls_example.py  tool_calls_example.py
examples/integrations/google/: conversation_history_test.py
examples/integrations/groq/: conversation_history_test.py  streaming_chat_example.py  tool_calls_example.py
examples/integrations/lancedb/: document_retrieval_example.py  openai_embeddings_example.py
examples/integrations/openai/: async_chat_example.py  chat_example.py  parser_example.py  streaming_chat_example.py  vision_example.py
examples/integrations/perplexity/: README.md  basic_usage.py  list_models.py  r1_1776_example.py  sonar_deep_research_example.py  sonar_example.py  sonar_pro_example.py  sonar_reasoning_example.py  streaming_example.py
examples/integrations/sambanova/: conversation_history_test.py  streaming_chat_example.py
examples/integrations/search/: exa_search_example.py  exa_with_gpt4o_example.py
examples/integrations/together/: README.md  chat_example.py  conversation_history_test.py  image_generation_example.py  rerank_example.py  streaming_chat_example.py  tool_calls_example.py
examples/together/: image_generation.py  image_generation_example.py
examples/tools/: coding_tools_example.py  fireworks_tool_example.py  groq_tool_example.py  stateful_tool_example.py  together_tool_example.py  web_search_example.py
examples/travel/: verification_agent_usage.py
scripts/: airtrain-release.py  build.sh  bump_version.py  fireworks_weather_api_test.py  groq_weather_api_test.py  list_anthropic_models.py  list_fireworks_models.py  list_fireworks_models_factory.py  list_openai_models.py  list_together_models.py  list_together_models_factory.py  publish.sh  release.py  test_fireworks_tool_call.py  test_groq_token_limits.py  test_groq_tool_call.py  test_together_tool_call.py
services/: firebase_service.py  openai_service.py
tests/: conftest.py
tests/integrations/fireworks/: README.md  conftest.py  debug_helpers.py  test_credentials.py  test_structured_requests_skills.py  test_structured_requests_streaming.py
tests/integrations/search/: test_exa.py
tests/integrations/together/: README.md  __init__.py  conftest.py  debug_helpers.py  test_chat_skill.py  test_chat_streaming.py  test_credentials.py  test_image_skill.py  test_rerank_skill.py
tests/integrations/together_tests/: test_together.py
(+7 files in other folders)
