[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "trmx"
version = "0.3.16"
description = "A powerful terminal chat interface for multiple AI models with local session storage"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ "Development Status :: 3 - Alpha", "Environment :: Console", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Communications :: Chat",]
dependencies = [ "airtrain>=0.1.58", "rich>=12.0.0", "typer>=0.7.0", "python-dotenv>=0.20.0", "requests>=2.25.0", "packaging>=21.3",]
[[project.authors]]
name = "AirTrain Team"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "black>=22.0.0", "isort>=5.10.0", "mypy>=0.950",]

[project.urls]
Homepage = "https://github.com/yourusername/airtrain"
"Bug Tracker" = "https://github.com/yourusername/airtrain/issues"

[project.scripts]
trmx = "trmx_agent.cli:app"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
